sumo/tests/traci/VariableRetrieval/Route/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 166 84 xxx
simstep 6 1
